--- a/demo/styles.css
+++ b/demo/styles.css
@@ -12,7 +12,7 @@ header {
     z-index: 10;
     border-radius: 0 0 1rem 1rem;
     height: 15vh;
-    background: linear-gradient(to right,  #393472, #00004f);
+    background: linear-gradient(to right,  #393472, #000028);
     color: whitesmoke;
     font-size: 4rem;
     font-family: 'Common Pixel', sans-serif;
@@ -52,5 +52,53 @@ main {
     background-color: #393472;
 }
 
-footer {
+form {
+     height: 100%;
+     width: 100%;
+ }
+
+.form-container {
+    z-index: 2;
+    margin-top: 30vh;
+    margin-left: 15vw;
+    height: 51%;
+    width: 30%;
+}
+
+fieldset {
+    background-color: #00004f;
+    border-width: 0;
+    box-sizing: border-box;
+    padding: 15% 0 10% 0;
+    border-radius: 1rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+input[type="text"] {
+    height: 23%;
+    width: 70%;
+    border-radius: 0.8rem;
+}
+
+input[type="password"] {
+    height: 23%;
+    width: 70%;
+    border-radius: 0.8rem;
+}
+
+input[type="button"] {
+    height: 23%;
+    width: 40%;
+    background-color: #00ff5a;
+    border-radius: 0.8rem;
+    margin-top: 5%;
+    font-family: "Courier New", monospace;
+    font-weight: bold;
+    font-size: 120%;
+    color: white;
+
 }
