--- a/demo/styles.css
+++ b/demo/styles.css
@@ -59,10 +59,10 @@ form {
 
 .form-container {
     z-index: 2;
-    margin-top: 30vh;
-    margin-left: 15vw;
-    height: 51%;
-    width: 30%;
+    margin-top: 35vh;
+    margin-left: 18vw;
+    height: 40%;
+    width: 25%;
 }
 
 fieldset {
@@ -80,14 +80,22 @@ fieldset {
 
 input[type="text"] {
     height: 23%;
+    box-sizing: border-box;
     width: 70%;
     border-radius: 0.8rem;
+    font-size: 120%;
+    padding: 0 10% 0 10%;
+    font-family: "Lucida Console", monospace;
 }
 
 input[type="password"] {
     height: 23%;
     width: 70%;
+    box-sizing: border-box;
+    padding: 0 10% 0 10%;
     border-radius: 0.8rem;
+    font-size: 120%;
+    font-family: "Lucida Console", monospace;
 }
 
 input[type="button"] {
