--- a/demo/settings.css
+++ b/demo/settings.css
@@ -46,6 +46,7 @@ header div {
 }
 
 main {
+    overflow: hidden;
     z-index: 1;
     margin-top: -15vh;
     height: 100vh;
@@ -53,21 +54,28 @@ main {
 }
 
 .collapsible {
-    margin-top: 15vh;
-    background-color: #eee;
-    color: #444;
+    background-color: #00004f;
+    font-family: "Courier New", monospace;
+    font-size: 1.3rem;
+    font-weight: bold;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 25vh;
+    margin-left: 15vw;
+    color: whitesmoke;
     cursor: pointer;
-    padding: 18px;
-    width: 100%;
+    height: 10vh;
+    padding: 0 2vw 0 1vw;
+    width: 70%;
     border: none;
     text-align: left;
     outline: none;
-    font-size: 15px;
   }
   
   /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
   .active, .collapsible:hover {
-    background-color: #ccc;
+    background-color: #8690cf;
   }
   
   /* Style the collapsible content. Note: hidden by default */
@@ -75,16 +83,57 @@ main {
     padding: 0 18px;
     display: none;
     overflow: hidden;
-    background-color: #f1f1f1;
+    background-color: #8690cf;
+    color: #00004f;
   }
 
 .coll-cont {
+    height: 10vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 
-  button input[type="text"] {
-      width: 80%;
+button input[type="text"] {
+    width: 60vw;
+    height: 6vh;
+    font-weight: normal;
+    box-sizing: border-box;
+    padding-left: 2vw;
+    padding-right: 2vw;
+    font-family: "Lucida Console", monospace;
+}
+
+.background-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: auto;
+    width: 100%;
+    height: 7vh;
+    webkit-filter: blur(2px); /* Chrome, Safari, Opera */
+    filter: blur(2px);
+}
+
+.sliding-background {
+    webkit-filter: blur(3px); /* Chrome, Safari, Opera */
+    filter: blur(3px);
+    background: url("back.png") repeat-y;
+    height: 300%;
+    width: 100%; /* The image width times 3 */
+    animation: slide 180s linear infinite;
+  }
+
+  @keyframes slide {
+    0% {
+      transform: translate3d(0, 0, 0);
+    }
+    100% {
+      transform: translate3d(0, -2160px, 0); /* The image width */
+    }
+  }
+
+  input:focus {
+      outline: none;
   }
